--- a/main/config.h.template
+++ b/main/config.h.template
@@ -2,12 +2,12 @@
 #define _CONFIG_H
 
 static const int button_pin = A0;
-static const int led_pin = LED_BUILTIN;
+static const int led_pin = 2;
 
 static const char ssid[] = "YOUR WIFI SSID HERE"; //Your WiFi SSID
 static const char password[] = "WIFI PASSWORD HERE"; //WiFi password
 
 static const char mqtt_server[] = "192.168.0.155"; //IP of MQTT broker- CHANGE THIS TO MATCH YOUR IP
 static const int mqtt_port = 1883;
-static const char mqtt_topic = "ha/buttons/laundry"; //Topic of button
+static const char mqtt_topic[] = "ha/buttons/laundry"; //Topic of button
 #endif
